force-app/main/default/objects/Lead/fields/Aboriginal_or_Torres_Strait_Islander__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_or_Torres_Strait_Islander__c</fullName>
    <description>Indicates Aboriginal or Torres Strait Islander origin</description>
    <inlineHelpText>Indicates Aboriginal and/or Torres Strait Islander origin</inlineHelpText>
    <label>Aboriginal or Torres Strait Islander</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>