force-app/main/default/objects/Lead/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Birthdate of Lead being created - will be populated on converted Contact via Workflow</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>