force-app/main/default/objects/Lead/fields/Connection_to_CHD_used_in_web_forms__c.field-meta.xml
<CustomField>
    <fullName>Connection_to_CHD_used_in_web_forms__c</fullName>
    <description>&quot;I am&quot; field values as shown in contact forms. This field is used as an intermediary field for personal and professional CHD connection fields on Salesforce</description>
    <label>Connection to CoHD (used in web forms)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connection_to_CHD_used_in_web_forms</valueSetName>
    </valueSet>
</CustomField>