force-app/main/default/objects/Lead/fields/Dependent_1_ATSI_Status__c.field-meta.xml
<CustomField>
    <fullName>Dependent_1_ATSI_Status__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Dependent 1 ATSI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes Aboriginal</fullName>
            </value>
            <value>
                <fullName>Yes Torres Strait Islander</fullName>
            </value>
            <value>
                <fullName>Yes Aboriginal and Torres Strait Islander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>