force-app/main/default/objects/Lead/fields/Dependent_2_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_Birthdate__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 2 Birthdate</label>
    <type>Date</type>
</CustomField>