force-app/main/default/objects/Lead/fields/Dependent_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_First_Name__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>