force-app/main/default/objects/Lead/fields/Dependent_2_Heart_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Dependent_2_Heart_Conditions__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 2 Heart Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Heart_Conditions</valueSetName>
    </valueSet>
</CustomField>