force-app/main/default/objects/Lead/fields/Dependent_3_ATSI_Status__c.field-meta.xml
<CustomField>
    <fullName>Dependent_3_ATSI_Status__c</fullName>
    <description>HK Support web form use only</description>
    <label>Dependent 3 ATSI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>