force-app/main/default/objects/Lead/fields/Dependent_3_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_3_Last_Name__c</fullName>
    <label>Dependent 3 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>