force-app/main/default/objects/Lead/fields/Dependent_4_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Dependent_4_Heart_Conditions_Other__c</fullName>
    <description>HK Connect web for use only</description>
    <label>Dependent 4 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>