force-app/main/default/objects/Lead/fields/External_System_Link__c.field-meta.xml
<CustomField>
    <fullName>External_System_Link__c</fullName>
    <description>Contains the URL of the website that the lead was generated from</description>
    <inlineHelpText>Contains the URL of the website that the lead was generated from</inlineHelpText>
    <label>External System Link</label>
    <type>Url</type>
</CustomField>