force-app/main/default/objects/Lead/fields/HP_Email__c.field-meta.xml
<CustomField>
    <fullName>HP_Email__c</fullName>
    <description>&quot;Honeypot&quot; email field - to be added to web-to-lead fields to help filter out spam submissions</description>
    <label>HP Email</label>
    <type>Email</type>
</CustomField>