force-app/main/default/objects/Lead/fields/Marketing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Emails</label>
    <type>Checkbox</type>
</CustomField>