force-app/main/default/objects/Lead/fields/No_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maps to field of same name when Lead is converted to a Contact</description>
    <label>No Solicitation</label>
    <type>Checkbox</type>
</CustomField>