force-app/main/default/objects/Lead/fields/Personal_Connection_to_CHD__c.field-meta.xml
<CustomField>
    <fullName>Personal_Connection_to_CHD__c</fullName>
    <label>Personal Connection to CoHD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Angel</fullName>
            </value>
            <value>
                <fullName>Heart Angel Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Angel Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Angel Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Kid</fullName>
            </value>
            <value>
                <fullName>Heart Kid Adult</fullName>
            </value>
            <value>
                <fullName>Heart Kid Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Kid Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Kid Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Kid Extended Family</fullName>
            </value>
            <value>
                <fullName>Heart Kid Bereaved Family Member</fullName>
            </value>
            <value>
                <fullName>Community Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>