force-app/main/default/objects/Lead/fields/Professional_Connection_to_CHD__c.field-meta.xml
<CustomField>
    <fullName>Professional_Connection_to_CHD__c</fullName>
    <description>Same field as on Contact, with &apos;Ambassador&apos;, HKL Board Member./Director/Staff, Patron &amp; Stakeholder removed. Will map to field of same name on Contact when Lead is converted</description>
    <label>Professional Connection to CoHD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Partner/Contact</fullName>
            </value>
            <value>
                <fullName>Health Professional</fullName>
            </value>
            <value>
                <fullName>Hospital Administration</fullName>
            </value>
            <value>
                <fullName>Hospital PR</fullName>
            </value>
            <value>
                <fullName>Media Contact</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>