force-app/main/default/objects/Lead/fields/Secondary_Contact_ATSI_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_ATSI_Status__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact ATSI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>