force-app/main/default/objects/Lead/fields/Secondary_Contact_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Birthdate__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact Birthdate</label>
    <type>Date</type>
</CustomField>