force-app/main/default/objects/Lead/fields/Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact Email</label>
    <type>Email</type>
</CustomField>