force-app/main/default/objects/Lead/fields/Secondary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_First_Name__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>