force-app/main/default/objects/Lead/fields/Secondary_Contact_Gender__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Gender__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>