force-app/main/default/objects/Lead/fields/Secondary_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Type__c</fullName>
    <description>HK Connect web form use only</description>
    <label>Secondary Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Angel Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Angel Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Angel Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Kid Adult</fullName>
            </value>
            <value>
                <fullName>Heart Kid Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Kid Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Kid Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Kid Extended Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>