force-app/main/default/objects/Lead/fields/Volunteer_Availability__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Availability__c</fullName>
    <label>Volunteer Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>AM Suits</fullName>
            </value>
            <value>
                <fullName>PM Suits</fullName>
            </value>
            <value>
                <fullName>Once a month</fullName>
            </value>
            <value>
                <fullName>Twice a month</fullName>
            </value>
            <value>
                <fullName>Any time suits</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <isActive>false</isActive>
                <label>Afternoon</label>
            </value>
            <value>
                <fullName>Morning</fullName>
                <isActive>false</isActive>
                <label>Morning</label>
            </value>
            <value>
                <fullName>Weekdays</fullName>
                <isActive>false</isActive>
                <label>Weekdays</label>
            </value>
            <value>
                <fullName>Weekends</fullName>
                <isActive>false</isActive>
                <label>Weekends</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <isActive>false</isActive>
                <label>Weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>