force-app/main/default/objects/Lead/fields/Volunteer_Role__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Role__c</fullName>
    <description>What type of role are they applying for</description>
    <inlineHelpText>What type of role are they applying for</inlineHelpText>
    <label>Volunteer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Role</valueSetName>
    </valueSet>
</CustomField>