force-app/main/default/objects/Lead/fields/Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skills__c</fullName>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation Collection</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Event Set-up</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Gift Wrapping</fullName>
            </value>
            <value>
                <fullName>Office/Admin</fullName>
            </value>
            <value>
                <fullName>Raffle Ticket Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>