force-app/main/default/objects/Lead/fields/Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Status__c</fullName>
    <inlineHelpText>Volunteer Status should be updated by User before Lead is converted into a Contact</inlineHelpText>
    <label>Volunteer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sign Up</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Do Not Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>