force-app/main/default/objects/Lead/fields/webkul_wws__Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Product_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Interested</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>