force-app/main/default/objects/Lead/listViews/Lead_Source_Assignment_Rule_Queues_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Source_Assignment_Rule_Queues_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Tara &amp; Liam</label>
    <queue>Lead_Source_Assignment_Rule_Queues</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>